# Chaos-Engine

./: Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
apps/dedicated_server/: Cargo.toml
apps/editor/: Cargo.toml
apps/sandbox/: Cargo.toml
apps/sandbox/src/: geometry_demo.rs  main.rs
apps/sandbox/src/geometry_demo/: content.rs  debug.rs  environment.rs  lighting.rs  mirror.rs  mod.rs  opacity.rs  pbr.rs  spin.rs  stage.rs  swarm.rs
assets/: README.md
assets/models/: floor.glb
assets/scenes/: demo.cscn
assets/textures/: checker.ppm
crates/engine/chaos_assets/: Cargo.toml
crates/engine/chaos_assets/src/: import.rs  lib.rs  manager.rs  registry.rs
crates/engine/chaos_audio/: Cargo.toml
crates/engine/chaos_ecs/: Cargo.toml
crates/engine/chaos_ecs/src/: command.rs  component.rs  entities.rs  lib.rs  message.rs  query.rs  resource.rs  schedule.rs  storage.rs  system.rs  world.rs
crates/engine/chaos_ecs/tests/: isolation.rs
crates/engine/chaos_engine/: Cargo.toml
crates/engine/chaos_engine/src/: assets.rs  config.rs  context.rs  debug.rs  diagnostics.rs  engine.rs  lib.rs  metrics.rs  render_subsystem.rs  scenes.rs  subsystem.rs
crates/engine/chaos_engine/tests/: boundaries.rs  headless.rs  stress.rs
crates/engine/chaos_network/: Cargo.toml
crates/engine/chaos_physics/: Cargo.toml
crates/engine/chaos_renderer/: Cargo.toml
crates/engine/chaos_renderer/shaders/: debug.wgsl  lit.wgsl  pbr.wgsl  shadow.wgsl  sky.wgsl  textured.wgsl  vertex_color.wgsl
crates/engine/chaos_renderer/src/: backend.rs  capabilities.rs  config.rs  debug.rs  diagnostics.rs  environment.rs  frame.rs  geometry.rs  lib.rs  lifetime.rs  light.rs  material.rs  mesh.rs  pass.rs  pool.rs  queue.rs  renderer.rs  shaders.rs  shadow.rs  suite.rs  target.rs  testing.rs  visibility.rs
crates/engine/chaos_renderer/src/backend/: mod.rs  wgpu_backend.rs
crates/engine/chaos_renderer/src/backend/wgpu/: binding.rs  buffer.rs  convert.rs  debug.rs  depth.rs  frame.rs  instances.rs  mod.rs  pipeline.rs  render_target.rs  sampler.rs  setup.rs  texture.rs  timing.rs  uniforms.rs
crates/engine/chaos_renderer/src/renderer/: debug_draws.rs  instrumentation.rs  lighting.rs  materials.rs  meshes.rs  mod.rs  passes.rs  pipelines.rs  resolve.rs  resources.rs
crates/engine/chaos_renderer/src/renderer/tests/: core.rs  culling.rs  debug.rs  diagnostics.rs  instancing.rs  lifetime.rs  lighting.rs  materials.rs  mod.rs  opacity.rs  passes.rs  shadows.rs  support.rs  targets.rs  textures.rs
crates/engine/chaos_renderer/src/resources/: binding.rs  buffer.rs  mod.rs  pipeline.rs  render_target.rs  sampler.rs  shader.rs  texture.rs  vertex.rs
crates/engine/chaos_renderer/tests/: isolation.rs  shader_validation.rs
crates/engine/chaos_scene/: Cargo.toml
crates/engine/chaos_scene/src/: hierarchy.rs  lib.rs  manager.rs  member.rs  mesh_ref.rs  prefab.rs  propagation.rs  scene.rs  serialization.rs
crates/engine/chaos_scene/tests/: isolation.rs
crates/engine/chaos_window/: Cargo.toml
crates/engine/chaos_window/src/: config.rs  handle.rs  lib.rs  runner.rs  translate.rs
crates/foundation/chaos_core/: Cargo.toml
crates/foundation/chaos_core/src/: asset.rs  camera.rs  color.rs  entity.rs  error.rs  event.rs  input.rs  lib.rs  math.rs  scene.rs  time.rs  transform.rs
crates/platform/chaos_api/: Cargo.toml
crates/platform/chaos_runtime/: Cargo.toml
crates/platform/chaos_scripting/: Cargo.toml
crates/tools/chaos_tools/: Cargo.toml
docs/: README.md  git-workflow.md  testing.md  versioning.md
docs/architecture/: engine-loop.md  math-conventions.md  overview.md  threading.md
docs/assets/: overview.md
docs/ecs/: overview.md
docs/renderer/: consolidation-validation.md  lighting-preparation.md  overview.md
docs/scene/: overview.md
examples/: README.md
mods/: README.md
tests/: README.md
tools/: README.md
(+4 files in other folders)
