[package]
name = "sandbox"
description = "Client de test de la plateforme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chaos_engine.workspace = true
env_logger.workspace = true
log.workspace = true

[lints]
workspace = true
