[package]
name = "chaos_renderer"
description = "Rendu graphique"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chaos_core.workspace = true
log.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true

[lints]
workspace = true
