[package]
name = "chaos_window"
description = "Fenêtre, entrées et événements"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chaos_core.workspace = true
log.workspace = true
raw-window-handle.workspace = true
winit.workspace = true

[lints]
workspace = true
