[package]
name = "chaos_scripting"
description = "Hôte de scripting sandboxé de la plateforme : VM et bindings vers chaos_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chaos_core.workspace = true
chaos_api.workspace = true

[lints]
workspace = true
